# kromer

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/: FUNDING.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/routes/v1/: addresses.rs
docs/: astro.config.mjs  open_api.yaml  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.mdx
entity/: Cargo.toml
entity/src/: addresses.rs  names.rs  prelude.rs  transactions.rs
gen_openapi/: Cargo.toml  mod.rs
gen_openapi/src/: gen_openapi.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  main.rs
service/: Cargo.toml
service/src/: mutation.rs  query.rs
src/: lib.rs  main.rs
src/database/: db.rs
src/database/models/: mod.rs  name.rs  player.rs  transaction.rs  wallet.rs
src/models/: addresses.rs  misc.rs  motd.rs  names.rs  transactions.rs  websockets.rs
src/models/webserver/: lookup.rs
src/models/webserver/lookup/: addresses.rs
src/routes/: docs.rs  mod.rs
src/routes/internal/: wallet.rs  ws.rs
src/routes/krist/: misc.rs  mod.rs  names.rs  transactions.rs  wallet.rs  ws.rs
src/routes/krist/lookup/: addresses.rs  names.rs  transactions.rs
src/routes/v1/: transaction.rs
src/utils/: crypto.rs  mod.rs  validation_kromer.rs
src/websockets/: handler.rs  mod.rs
src/websockets/routes/: addresses.rs  auth.rs  me.rs  subscriptions.rs  transactions.rs
src/websockets/types/: common.rs  mod.rs
src/websockets/utils/: make_url.rs  mod.rs
surrealdb-migrations/migrations/: 20250213_170748_name_wallet.surql
surrealdb-migrations/migrations/definitions/: 20250213_170748_name_wallet.json  _initial.json
surrealdb-migrations/schemas/: functions.surql  name.surql  transaction.surql  wallet.surql
