[package]
default-run = "kromer"
name = "kromer"
version = "0.2.1"
authors = ["@bananasov", "@uerkw", "@ElonGates", "@EmmaKnijn", "@dimaguy"]
license = "GPL-3.0"
repository = "https://github.com/ReconnectedCC/kromer/"
edition = "2021"

[workspace]
members = [
    ".",
    "gen_openapi"
]

[[bin]]
name="gen_openapi"
path = "gen_openapi/src/gen_openapi.rs"

[dependencies]
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0.11"
surrealdb = "2.2.0"
chrono = { version = "0.4.39", features = ["serde"] }
actix-ws = "0.3.0"
futures-util = "0.3.31"
regex = "1.11.1"
once_cell = "1.20.3"
rust_decimal = { version = "1.36.0", features = ["serde-float"] }
rust_decimal_macros = "1.36.0"
surrealdb-migrations = "2.2.0"
sha2 = "0.10.8"
rand = "0.9.0"
toml = "0.8.20"
hex = "0.4.3"
actix-files = "0.6.6"
dashmap = "6.1.0"
bytestring = "1.4.0"
utoipa = {version = "5.3.1", features = ["actix_extras"] }
